Database Connection Begun

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,9 +18,9 @@
     </header>
     <div class="container">
         <br/>
-        <p class="title">Welcome to Your Meeting about the HPV Vaccine!</p>
+        <!-- <p class="title">Welcome to Your Meeting about the HPV Vaccine!</p> -->
        
-        <p class="subtitle">Who would you like to meet with? <br/>(tap the image below to select)</p>
+        <p class="title">Who would you like to meet with? <br/>(select a virtual character)</p>
         <br/>
         <br/>
         <div class="selection-area">
