--- a/public/css/educationalComponent.css
+++ b/public/css/educationalComponent.css
@@ -49,5 +49,11 @@ button{
     display: none;
 }
 
+.titleOrange {
+    font-size: 35px !important;
+    background-color: orangered;
+    color: white;
+    text-align: center; 
+}
 
 
