--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,7 +1,7 @@
 .navbar {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 15px;
     border-bottom: 3px solid navy;
