--- a/views/pages/type/EducationalComponent/buttonResponseTemplatePage.ejs
+++ b/views/pages/type/EducationalComponent/buttonResponseTemplatePage.ejs
@@ -15,8 +15,9 @@
         <%- include('../../../partials/header'); %>
     </header>
     <div class="container">
-        <h1 class="title"><%=info.title%></h1>
+        <h1 class="titleOrange"><%=info.title%></h1>
         
+        <br/>
         <br/>
         
     <div class="user-selection-area">
