--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
     <div class="navbar">
         
         <img class="HPVLogo" src="https://hpv-project.s3.amazonaws.com/Assets/UTSAHealthLogo.jpeg" />
-        <img class="HPVLogo" src="https://hpv-project.s3.amazonaws.com/Assets/UF+Logo.png" />
+        <!-- <img class="HPVLogo" src="https://hpv-project.s3.amazonaws.com/Assets/UF+Logo.png" /> -->
         <!-- <img class="NKFLogo" src="https://hpv-project.s3.amazonaws.com/Assets/OSU+Medicine+Logo.png" /> -->
     </div>
          
