--- a/views/pages/type/EducationalComponent/discussWithDoctor.ejs
+++ b/views/pages/type/EducationalComponent/discussWithDoctor.ejs
@@ -28,7 +28,7 @@
     </div>
         
     <a href="/<%=id%>">
-        <button class="back">Go Back</button>
+        <button class="back">Start from Beginning</button>
     </a>
     <center><a href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
         <button id="viewTranscriptButton">View Transcript</button>
