--- a/views/pages/type/EducationalComponent/recommendation.ejs
+++ b/views/pages/type/EducationalComponent/recommendation.ejs
@@ -28,7 +28,7 @@
     </div>
         
     <a href="/<%=id%>">
-        <button class="back">Go Back</button>
+        <button class="back">Start from Beginning</button>
     </a>
     <a href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
         <button class="next">Next</button>
