--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,6 +10,7 @@
     <link href="/css/index.css" rel="stylesheet" type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bowser/2.11.0/bundled.js"></script>
     <script src="/scripts/index.js"></script>
+    <link rel="icon" href="data:,">
     <title>HPV</title>
 </head>
 <body>
