--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,6 +10,7 @@
     <link href="/css/index.css" rel="stylesheet" type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bowser/2.11.0/bundled.js"></script>
     <script src="/scripts/index.js"></script>
+    <script src="/scripts/registerClicks.js"></script>
     <link rel="icon" href="data:,">
     <title>HPV</title>
 </head>
@@ -26,7 +27,7 @@
         <br/>
         <div class="selection-area">
             <div class="choose-alex">
-                <a href="/<%=id%>/EducationalComponent/Character_a/Introduction">
+                <a href="/<%=id%>/EducationalComponent/Character_a/Introduction" onclick="sendToDatabase('Character_Selected','Character_a')">
                     <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/a_chauncy_image.png" />
                     <!-- <img class="alex-snippet" src="/images/a_henry_image.png" /> -->
                 </a>
