--- a/views/pages/type/EducationalComponent/buttonResponseTemplatePage.ejs
+++ b/views/pages/type/EducationalComponent/buttonResponseTemplatePage.ejs
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;900&display=swap" rel="stylesheet">
     <link href="/css/master.css" rel="stylesheet" type="text/css">
     <link href="/css/educationalComponent.css" rel="stylesheet" type="text/css">
+    <script src="/scripts/registerClicks.js"></script>
+    <link rel="icon" href="data:,">
     <title>HPV</title>
 </head>
 <body>
@@ -22,7 +24,7 @@
         
     <div class="user-selection-area">
         <% for (var i = 0; i < info.buttons.length; i++) { %>
-                <button onclick="logAndRedirect(`<%= url %>`, `<%=info.buttons[i].buttonName%>`, `<%=id%>`, `<%=type%>`, `<%=info.buttons[i].linkToURL%>`)" class="user-selection-button">
+                <button onclick="sendToDatabase(`<%= url %>`, `<%=info.buttons[i].buttonName%>`);buttonRedirect(`<%=id%>`, `<%=type%>`, `<%=info.buttons[i].linkToURL%>`)" class="user-selection-button">
                     <%= info.buttons[i].buttonName %>
                 </button>
          
