--- a/views/pages/type/EducationalComponent/finalTranscriptPage.ejs
+++ b/views/pages/type/EducationalComponent/finalTranscriptPage.ejs
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;900&display=swap" rel="stylesheet">
     <link href="/css/master.css" rel="stylesheet" type="text/css">
     <link href="/css/educationalComponent.css" rel="stylesheet" type="text/css">
+    <script src="/scripts/registerClicks.js"></script>
+    <link rel="icon" href="data:,">
     <title>HPV</title>
 </head>
 <body>
