durations and other data logged
durations and other data logged; character selection also logged

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,17 +31,17 @@
                     <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/a_chauncy_image.png" />
                     <!-- <img class="alex-snippet" src="/images/a_henry_image.png" /> -->
                 </a>
-                <a href="/<%=id%>/EducationalComponent/Character_b/Introduction">
+                <a href="/<%=id%>/EducationalComponent/Character_b/Introduction" onclick="sendToDatabase('Character_Selected','Character_b')">
                     <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/b_jack_image.png" />
                 </a>
                 
             </div>
             <div class="choose-alex">
-                <a href="/<%=id%>/EducationalComponent/Character_c/Introduction">
+                <a href="/<%=id%>/EducationalComponent/Character_c/Introduction" onclick="sendToDatabase('Character_Selected','Character_c')">
                     <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/c_alex_image.png" />
                 </a>
                 
-                <a href="/<%=id%>/EducationalComponent/Character_d/Introduction">
+                <a href="/<%=id%>/EducationalComponent/Character_d/Introduction" onclick="sendToDatabase('Character_Selected','Character_d')">
                     <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/d_dammie_image.png" />
                 </a>
                 
