--- a/views/pages/type/EducationalComponent/discussWithDoctor.ejs
+++ b/views/pages/type/EducationalComponent/discussWithDoctor.ejs
@@ -32,7 +32,7 @@
     <a href="/<%=id%>">
         <button class="back">Start from Beginning</button>
     </a>
-    <center><a href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
+    <center><a onclick="calculateDuration('Duration_DiscussWithDoctorPage')" href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
         <button id="viewTranscriptButton">View Transcript</button>
     </a></center>
     
