--- a/views/pages/type/EducationalComponent/hpvInformation.ejs
+++ b/views/pages/type/EducationalComponent/hpvInformation.ejs
@@ -32,7 +32,7 @@
     <a href="/<%=id%>">
         <button class="back">Start from Beginning</button>
     </a>
-    <a href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
+    <a onclick="calculateDuration('Duration_HPVInfoPage')" href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
         <button class="next">Next</button>
     </a>
     
