--- a/views/pages/type/EducationalComponent/suggestionsForOncologyVisit.ejs
+++ b/views/pages/type/EducationalComponent/suggestionsForOncologyVisit.ejs
@@ -35,7 +35,7 @@
     <br/>
     <br/>
 
-    <center><a href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
+    <center><a onclick="calculateDuration('Duration_SuggestionForOncologyPage')" href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
         <button id="viewTranscriptButton">View Transcript</button>
     </a></center>
     
