--- a/views/pages/type/EducationalComponent/introduction.ejs
+++ b/views/pages/type/EducationalComponent/introduction.ejs
@@ -32,7 +32,8 @@
     <a href="/<%=id%>">
         <button class="back">Start from Beginning</button>
     </a>
-    <a href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
+    
+    <a onclick="calculateDuration('Duration_IntroPage')" href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
         <button class="next">Next</button>
     </a>
 
