changes I cant remember

--- a/views/pages/type/EducationalComponent/finalTranscriptPage.ejs
+++ b/views/pages/type/EducationalComponent/finalTranscriptPage.ejs
@@ -17,7 +17,7 @@
         <%- include('../../../partials/header'); %>
     </header>
     <div class="container">
-        <h1 class="title">Transcript of Your Interaction</h1>
+        <h1 class="title">Transcript of your interaction</h1>
         
         <br/>
     <center> <p>Transcript coming soon </p></center>
