--- a/views/pages/type/EducationalComponent/suggestionsForOncologyVisit.ejs
+++ b/views/pages/type/EducationalComponent/suggestionsForOncologyVisit.ejs
@@ -30,7 +30,7 @@
     </div>
         
     <a href="/<%=id%>">
-        <button class="back">Start from Beginning</button>
+        <button class="back">Start from beginning</button>
     </a>
     <br/>
     <br/>
