--- a/views/pages/type/EducationalComponent/hpvInformation.ejs
+++ b/views/pages/type/EducationalComponent/hpvInformation.ejs
@@ -30,7 +30,7 @@
     </div>
         
     <a href="/<%=id%>">
-        <button class="back">Start from Beginning</button>
+        <button class="back">Start from beginning</button>
     </a>
     <a onclick="calculateDuration('Duration_HPVInfoPage')" href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
         <button class="next">Next</button>
