Prevent Iphone video pop up + caption code

--- a/views/pages/type/EducationalComponent/introduction.ejs
+++ b/views/pages/type/EducationalComponent/introduction.ejs
@@ -18,8 +18,10 @@
     </header>
     <div class="container">
         <h1 class="title">Alex: Your Virtual Assistant</h1>
-        <video autoplay id="myvideo">
+        <video autoplay id="myvideo" playsinline>
             <source src="https://hpv-project.s3.amazonaws.com/<%=type%>/Introduction.mp4" type="video/mp4">
+            <!-- <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/Introduction.vtt"> -->
+
         </video>
         <br/> 
         <br/> 
