--- a/views/pages/type/EducationalComponent/introduction.ejs
+++ b/views/pages/type/EducationalComponent/introduction.ejs
@@ -20,7 +20,7 @@
         <h1 class="title">Alex: Your Virtual Assistant</h1>
         <video autoplay id="myvideo" playsinline>
             <source src="https://hpv-project.s3.amazonaws.com/<%=type%>/Introduction.mp4" type="video/mp4">
-            <!-- <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/Introduction.vtt"> -->
+            <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/Introduction.vtt">
 
         </video>
         <br/> 
