subtitles added for videos

--- a/views/pages/type/EducationalComponent/discussWithDoctor.ejs
+++ b/views/pages/type/EducationalComponent/discussWithDoctor.ejs
@@ -20,7 +20,7 @@
         <h1 class="title">Discuss with Your Doctor During Your Next Visit</h1>
         <video autoplay id="myvideo" playsinline>
             <source src="https://hpv-project.s3.amazonaws.com/<%=type%>/discussWithDoctor.mp4" type="video/mp4">
-            <!-- <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/discussWithDoctor.vtt"> -->
+            <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/discussWithDoctor.vtt">
 
         </video>
         <br/> 
