--- a/views/pages/type/EducationalComponent/hpvInformation.ejs
+++ b/views/pages/type/EducationalComponent/hpvInformation.ejs
@@ -20,7 +20,7 @@
         <h1 class="title">HPV Vaccine Information</h1>
         <video autoplay id="myvideo" playsinline>
             <source src="https://hpv-project.s3.amazonaws.com/<%=type%>/hpvInfo.mp4" type="video/mp4">
-            <!-- <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/hpvInfo.vtt"> -->
+            <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/hpvInfo.vtt">
 
         </video>
         <br/> 
