--- a/views/pages/type/EducationalComponent/suggestionsForOncologyVisit.ejs
+++ b/views/pages/type/EducationalComponent/suggestionsForOncologyVisit.ejs
@@ -20,7 +20,7 @@
         <h1 class="title">Suggestions for Your Upcoming Oncology Visit</h1>
         <video autoplay id="myvideo" playsinline>
             <source src="https://hpv-project.s3.amazonaws.com/<%=type%>/suggestionsForOncologyVisit.mp4" type="video/mp4">
-            <!-- <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/suggestionsForOncologyVisit.vtt"> -->
+            <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/suggestionsForOncologyVisit.vtt">
         </video>
         <br/> 
         <br/> 
