--- a/views/pages/type/EducationalComponent/recommendation.ejs
+++ b/views/pages/type/EducationalComponent/recommendation.ejs
@@ -20,7 +20,7 @@
         <h1 class="title">Recommendation</h1>
         <video autoplay id="myvideo" playsinline>
             <source src="https://hpv-project.s3.amazonaws.com/<%=type%>/Recommendation.mp4" type="video/mp4">
-            <!-- <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/Recommendation.vtt"> -->
+            <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/Recommendation.vtt">
         </video>
         <br/> 
         <br/> 
