--- a/public/css/educationalComponent.css
+++ b/public/css/educationalComponent.css
@@ -4,8 +4,7 @@ video {
 
 .title {
     font-size: 35px !important;
-    background-color: navy;
-    color: white;
+    color: navy;
     text-align: center; 
 }
 
@@ -56,4 +55,46 @@ button{
     text-align: center; 
 }
 
+
+.video-wrapper {
+    display: block;
+    position: relative;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0); /* Adjust the opacity as needed */
+}
+
+
+#playButton {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    border: none;
+    padding: 15px 30px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#playButton:focus {
+    outline: none;
+}
+
+#playButton:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.play-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.75); /* Adjust the opacity as needed */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
