--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,6 @@
     <link href="/css/index.css" rel="stylesheet" type="text/css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bowser/2.11.0/bundled.js"></script>
     <script src="/scripts/index.js"></script>
-    <script src="/scripts/registerClicks.js"></script>
     <link rel="icon" href="data:,">
     <title>HPV</title>
 </head>
@@ -27,21 +26,21 @@
         <br/>
         <div class="selection-area">
             <div class="choose-alex">
-                <a href="/<%=id%>/EducationalComponent/Character_a/Introduction" onclick="sendToDatabase('Character_Selected','Character_a')">
+                <a onclick="ContinueOrResetSession('Character_a')">
                     <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/a_chauncy_image.png" />
                     <!-- <img class="alex-snippet" src="/images/a_henry_image.png" /> -->
                 </a>
-                <a href="/<%=id%>/EducationalComponent/Character_b/Introduction" onclick="sendToDatabase('Character_Selected','Character_b')">
+                <a onclick="ContinueOrResetSession('Character_b')">
                     <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/b_jack_image.png" />
                 </a>
                 
             </div>
             <div class="choose-alex">
-                <a href="/<%=id%>/EducationalComponent/Character_c/Introduction" onclick="sendToDatabase('Character_Selected','Character_c')">
+                <a onclick="ContinueOrResetSession('Character_c')">
                     <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/c_alex_image.png" />
                 </a>
                 
-                <a href="/<%=id%>/EducationalComponent/Character_d/Introduction" onclick="sendToDatabase('Character_Selected','Character_d')">
+                <a onclick="ContinueOrResetSession('Character_d')">
                     <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/d_dammie_image.png" />
                 </a>
                 
