--- a/views/pages/type/EducationalComponent/introduction.ejs
+++ b/views/pages/type/EducationalComponent/introduction.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,38 +9,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;900&display=swap" rel="stylesheet">
     <link href="/css/master.css" rel="stylesheet" type="text/css">
     <link href="/css/educationalComponent.css" rel="stylesheet" type="text/css">
-    <script src="/scripts/registerClicks.js"></script>
     <link rel="icon" href="data:,">
     <title>HPV</title>
 </head>
+
 <body id-variable="<%=id%>" type-variable="<%=type%>" next-page-variable="<%=nextPageURL%>" url="<%=url%>">
     <header>
         <%- include('../../../partials/header'); %>
     </header>
     <div class="container">
-        <h1 class="title">Alex: Your Virtual Assistant</h1>
-        <video autoplay id="myvideo" playsinline>
-            <source src="https://hpv-project.s3.amazonaws.com/<%=type%>/Introduction.mp4" type="video/mp4">
-            <track default kind="captions" srclang="en" src="https://hpv-project.s3.amazonaws.com/<%=type%>/Introduction.vtt">
+        <h1 class="title" id="title"></h1>
+        <div class="video-wrapper" id="video-container">
+            <div style="margin-bottom: 15px;" class="video-wrapper">
+                <video autoplay id="myvideo" playsinline>
+                    <source src="" type="video/mp4">
+                    <track kind="captions" src="" srclang="en" label="English" default>
+                </video>
+                <div class="play-overlay">
+                    <button id="playButton">Play</button>
+                </div>
+            </div>
+            <div style="margin-bottom: 15px;" class="video-controls">
+                <button id="rewind">Repeat that</button>
+                <button id="pause">Play</button>
+            </div>
+        </div>
 
-        </video>
-        <br/> 
-        <br/> 
-        <br/>
-    <div class="video-controls">
-        <button id="rewind">Repeat that</button>
-        <button id="pause">| |</button>
-    </div>
-        
-    <a href="/<%=id%>">
-        <button class="back">Start from beginning</button>
-    </a>
-    
-    <a onclick="calculateDuration('Duration_IntroPage')" href="/<%=id%>/EducationalComponent/<%=type%>/<%=nextPageURL%>">
-        <button class="next">Next</button>
-    </a>
+        <div class="user-selection-area" id="questions-container">
+        </div>
+
+        <a onclick="backtoHomepage()">
+            <button class="back">Start from beginning</button>
+        </a>
+
+        <a onclick="nextPage()">
+            <button class="next" id="next-button">Next</button>
+        </a>
 
     </div>
     <script src="/scripts/videoControls.js"></script>
+    <script src="/scripts/pageSwitcher.js"></script>
 </body>
+
 </html>
