feat(Added-language-support): Presently added ES and EN, but wrote code in such as way that we can now easily add more languages
N

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,7 +23,7 @@
         <br />
         <!-- <p class="title">Welcome to Your Meeting about the HPV Vaccine!</p> -->
 
-        <p class="title">Who would you like to meet with? <br />(select a virtual character)</p>
+        <p class="title" id="IndexTitle"></p>
         <br />
         <br />
         <div class="selection-area">
