--- a/views/pages/type/EducationalComponent/introduction.ejs
+++ b/views/pages/type/EducationalComponent/introduction.ejs
@@ -26,12 +26,12 @@
                     <track kind="captions" src="" srclang="en" label="English" default>
                 </video>
                 <div class="play-overlay">
-                    <button id="playButton">Play</button>
+                    <button id="playButton"></button>
                 </div>
             </div>
             <div style="margin-bottom: 15px;" class="video-controls">
-                <button id="rewind">Repeat that</button>
-                <button id="pause">Play</button>
+                <button id="rewind"></button>
+                <button id="pause"></button>
             </div>
         </div>
 
@@ -41,15 +41,15 @@
         <div id="transcript-container"></div>
         
         <a onclick="previousPage()">
-            <button class="back" id="back-button">Back</button>
+            <button class="back" id="back-button"></button>
         </a>
 
         <a onclick="nextPage()">
-            <button class="next" id="next-button">Next</button>
+            <button class="next" id="next-button"></button>
         </a>
 
         <a onclick="endStudy()">
-            <button class="next" id="submit-button">Finish</button>
+            <button class="next" id="submit-button"></button>
         </a>
 
     </div>
