fix(Fixed-homepage-character-images): Images are now pulled based on language, rather than static images
Also fixed case where no language is mentioned in qparams, it now will default to english.

N

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,26 +29,21 @@
         <div class="selection-area">
             <div class="choose-alex">
                 <a onclick="ContinueOrResetSession('Character_a')">
-                    <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/a_chauncy_image.png" />
-                    <!-- <img class="alex-snippet" src="/images/a_henry_image.png" /> -->
+                    <img id="characterA" class="alex-snippet" src="" alt="Character A Image" />
                 </a>
                 <a onclick="ContinueOrResetSession('Character_b')">
-                    <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/b_jack_image.png" />
+                    <img id="characterB" class="alex-snippet" src="" alt="Character B Image" />
                 </a>
-
             </div>
             <div class="choose-alex">
                 <a onclick="ContinueOrResetSession('Character_c')">
-                    <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/c_alex_image.png" />
+                    <img id="characterC" class="alex-snippet" src="" alt="Character C Image" />
                 </a>
-
                 <a onclick="ContinueOrResetSession('Character_d')">
-                    <img class="alex-snippet" src="https://hpv-project.s3.amazonaws.com/Assets/d_dammie_image.png" />
+                    <img id="characterD" class="alex-snippet" src="" alt="Character D Image" />
                 </a>
-
             </div>
         </div>
-
 
     </div>
     <script src="/scripts/deviceInfo.js"></script>
