--- a/public/css/index.css
+++ b/public/css/index.css
@@ -33,7 +33,7 @@
     flex-direction: column;
     border: 3px solid navy;
     border-radius: 35px;
-    
+    overflow: hidden;
 }
 
 .choose-alex {
