--- a/views/pages/type/EducationalComponent/introduction.ejs
+++ b/views/pages/type/EducationalComponent/introduction.ejs
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;900&display=swap" rel="stylesheet">
     <link href="/css/master.css" rel="stylesheet" type="text/css">
     <link href="/css/educationalComponent.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="data:,">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>HPV</title>
 </head>
 
