--- a/public/css/index.css
+++ b/public/css/index.css
@@ -31,9 +31,6 @@
 .selection-area {
     display: flex;
     flex-direction: column;
-    border: 3px solid navy;
-    border-radius: 35px;
-    overflow: hidden;
 }
 
 .choose-alex {
@@ -46,6 +43,9 @@
     height: 250px;
     object-fit: cover;
     width: 250px;
+    border: 3px solid navy;
+    border-radius: 35px;
+    margin: 15px;
 }
 
 /* -- Comments on August Release -- 
